--- a/public/assets/css/utilities.css
+++ b/public/assets/css/utilities.css
@@ -1,27 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Italiana&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:slnt,wght@-10..0,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=DM+Mono:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Italianno&family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
 
 /* Font Family */
-.ff-playfair {
-    font-family: "Playfair Display", sans-serif !important;
+.ff-fira-sans {
+    font-family: "Fira Sans", serif !important;
 }
 
-.ff-italiana {
-    font-family: "Italiana", sans-serif !important;
-}
-
-.ff-times-new-roman {
-    font-family: "Times New Roman", Times, serif !important;
+.ff-italianno {
+    font-family: "Italianno", serif !important;
 }
 
 .ff-inter {
     font-family: "Inter", sans-serif !important;
-}
-
-.ff-dm-mono {
-    font-family: "DM Mono", monospace;
 }
 
 /* Font Weight */
@@ -44,6 +34,10 @@
 /* Font Size */
 .fs-96 {
     font-size: 96px !important;
+}
+
+.fs-64 {
+    font-size: 64px !important;
 }
 
 .fs-56 {
@@ -84,6 +78,10 @@
 
 .fs-16 {
     font-size: 16px !important;
+}
+
+.fs-15 {
+    font-size: 15px !important;
 }
 
 .fs-14 {
@@ -161,6 +159,10 @@
     border-radius: .5rem !important;
 }
 
+.h-screen {
+    height: 100vh;
+}
+
 /* Object Position */
 .object-position-top {
     object-position: top;
@@ -196,6 +198,30 @@
 
 .object-position-center-bottom-lg {
     object-position: center calc(75%);
+}
+
+.btn {
+    padding: 16px 32px;
+    display: flex;
+    gap: 22px;
+    border-radius: 4px;
+    align-items: center !important;
+    transition: all 150ms ease-in-out;
+}
+
+.btn-pill {
+    border-radius: 50px;
+}
+
+.btn-secondary {
+    background-color: var(--color-secondary);
+}
+
+.btn-secondary:hover,
+.btn-secondary:focus,
+.btn-secondary:active {
+    background-color: var(--color-secondary);
+    filter: brightness(105%);
 }
 
 @media screen and (max-width: 767px) {
@@ -243,6 +269,10 @@
 
     .fs-xs-16 {
         font-size: 16px !important;
+    }
+
+    .fs-xs-15 {
+        font-size: 15px !important;
     }
 
     .fs-xs-14 {
