--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -55,6 +55,124 @@ main.openned #hero .btn-invitation {
     width: 60%;
 }
 
+#gallery .swiper-slide {
+    background-size: cover;
+    background-position: center;
+}
+
+#gallery .swiper-gallery {
+    height: auto;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+#gallery .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 430px;
+    object-fit: cover;
+}
+
+#gallery .gallery-additional {
+    display: flex;
+    gap: 20px;
+}
+
+#gallery img {
+    display: block;
+    width: 100%;
+    height: 430px;
+    object-fit: cover;
+}
+
+#gallery img.photo-1 {
+    object-position: center;
+}
+
+#gallery img.photo-2 {
+    object-position: center;
+}
+
+#gallery img.photo-3 {
+    object-position: center;
+}
+
+#gallery img.photo-4 {
+    width: 75%;
+}
+
+#gallery img.photo-5 {
+    width: 25%;
+}
+
+/* Mobile */
+@media screen and (max-width: 767px) {
+    #gallery .swiper-slide img,
+    #gallery img {
+        height: 340px;
+    }    
+
+    #gallery .gallery-additional {
+        flex-direction: column;
+    }
+
+    #gallery img.photo-1 {
+        object-position: center;
+    }
+
+    #gallery img.photo-2 {
+        object-position: center;
+    }
+
+    #gallery img.photo-3 {
+        object-position: center;
+    }
+
+    #gallery img.photo-4 {
+        width: 100%;
+        object-position: calc(35%) center;
+    }
+
+    #gallery img.photo-5 {
+        width: 100%;
+        object-position: center;
+    }
+}
+
+/* Tablet */
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    #gallery .swiper-slide img,
+    #gallery img {
+        height: 400px;
+    }   
+
+    #gallery .gallery-additional {
+        flex-direction: column;
+    }
+
+    #gallery img.photo-1 {
+        object-position: bottom;
+    }
+
+    #gallery img.photo-2 {
+        object-position: bottom;
+    }
+
+    #gallery img.photo-3 {
+        object-position: bottom;
+    }
+
+    #gallery img.photo-4 {
+        width: 100%;
+        object-position: calc(35%) center;
+    }
+
+    #gallery img.photo-5 {
+        width: 100%;
+        object-position: center calc(75%);
+    }
+}
+
 /* Desktop */
 @media screen and (min-width: 1024px) {
     #hero .left {
@@ -128,56 +246,6 @@ main.openned #hero .btn-invitation {
 
 .onboarding .footer button {
     padding: 0.6rem 1.8rem;
-}
-
-#pre-gallery,
-#pre-comments {
-    background-image: url('../images/illustrations/wave-top.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: top;
-    height: 80px;
-}
-
-#gallery .swiper-slide {
-    background-size: cover;
-    background-position: center;
-}
-
-#gallery .swiper-gallery {
-    height: 600px;
-    width: 100%;
-}
-
-#gallery .swiper-gallery-thumb {
-    height: 20%;
-    padding: 10px 0;
-}
-
-#gallery .swiper-gallery-thumb .swiper-slide {
-    width: 25%;
-    height: 100%;
-    filter: brightness(50%);
-    transition: all 250ms ease-in-out;
-}
-
-#gallery .swiper-gallery-thumb .swiper-slide-thumb-active {
-    filter: brightness(100%);
-}
-
-#gallery .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-#gallery .swiper-gallery .swiper-button-prev::after,
-#gallery .swiper-gallery .swiper-button-next::after {
-    font-size: 10px;
-    color: var(--color-white);
-    background-color: rgba(0, 0, 0, 0.6);
-    padding: .85rem 1rem;
 }
 
 #countdown {
@@ -315,29 +383,6 @@ main.openned #hero .btn-invitation {
         margin-top: 15%;
     }
 
-    #hero .main .content {
-        margin-bottom: 40%;
-    }
-
-    #pre-gallery {
-        height: 80px;
-        background-position: center;
-    }
-
-    #gallery .swiper-gallery {
-        height: 300px;
-    }
-
-    #gallery .swiper-gallery-thumb {
-        height: 22%;
-    }
-
-    #gallery .swiper-gallery .swiper-button-prev::after,
-    #gallery .swiper-gallery .swiper-button-next::after {
-        font-size: 8px;
-        padding: .65rem .8rem;
-    }
-
     #countdown .content .timer {
         width: 25%;
     }
@@ -367,11 +412,7 @@ main.openned #hero .btn-invitation {
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    #hero .main .content {
-        margin-bottom: 15%;
-    }
-}
+@media screen and (min-width: 768px) and (max-width: 1023px) {}
 
 @media screen and (min-width: 1024px) {}
 
