--- a/public/assets/css/utilities.css
+++ b/public/assets/css/utilities.css
@@ -177,6 +177,10 @@
     border-radius: .5rem !important;
 }
 
+.rounded-16 {
+    border-radius: 16px !important;
+}
+
 .h-screen {
     height: 100vh;
 }
