--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -98,11 +98,25 @@ main.openned #hero .btn-invitation {
 }
 
 #gallery img.photo-4 {
-    width: 75%;
+    width: calc(75% - 20px);
 }
 
 #gallery img.photo-5 {
     width: 25%;
+}
+
+.maps-banner {
+    width: 100vw;
+    height: 480px;
+    background-image: url('/assets/images/general/address-banner.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+#maps iframe {
+    width: 350px;
+    height: 250px;
 }
 
 /* Mobile */
@@ -137,6 +151,15 @@ main.openned #hero .btn-invitation {
     #gallery img.photo-5 {
         width: 100%;
         object-position: center;
+    }
+
+    .maps-banner {
+        height: 340px;
+    }
+
+    #maps iframe {
+        width: 100%;
+        height: 340px;
     }
 }
 
