--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -119,7 +119,7 @@ main.openned #hero .btn-invitation {
     height: 250px;
 }
 
-#rsvp .banner{
+#rsvp .banner {
     width: 50%;
     height: 860px;
     background-image: url('/assets/images/general/rsvp-banner.png');
@@ -131,6 +131,39 @@ main.openned #hero .btn-invitation {
 #rsvp form input,
 #rsvp form select {
     border: 1px solid rgba(230, 230, 230, 1);
+}
+
+#gift .sub-title {
+    max-width: 500px;
+    margin: auto;
+}
+
+#gift .bank-wrapper {
+    max-width: 600px;
+    margin: auto;
+}
+
+#gift .bank-item {
+    padding: 2rem;
+    box-shadow: 0px 0px 1px 10px rgba(255, 255, 255, 0.2);
+}
+
+#gift .bank-item .header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#gift .bank-item .main {
+    display: flex;
+    align-items: end;
+    justify-content: space-between;
+}
+
+#gift .bank-item .actions {
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
 /* Mobile */
@@ -179,6 +212,30 @@ main.openned #hero .btn-invitation {
     #rsvp .banner {
         width: 100%;
         height: 500px;
+    }
+
+    #gift .bank-item {
+        padding: 1.5rem;
+        box-shadow: 0px 0px 1px 7px rgba(255, 255, 255, 0.2);
+    }
+
+    #gift .bank-item .header {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: start;
+    }
+
+    #gift .bank-item .main img.dots {
+        display: none;
+    }
+
+    #gift .bank-item .header span {
+        order: 2;
+    }
+
+    #gift .bank-item .header img {
+        order: 1;
     }
 }
 
@@ -315,35 +372,6 @@ main.openned #hero .btn-invitation {
     border: 0;
 }
 
-#quotes .quotes-images {
-    position: relative;
-}
-
-#quotes .quotes-images img.quotes-image-1 {
-    position: relative;
-    width: 224px;
-    height: 224px;
-    object-fit: cover;
-    left: 60px;
-    bottom: 112px;
-    border: 5px solid var(--color-secondary-light);
-}
-
-#quotes .quotes-images img.quotes-image-2 {
-    position: relative;
-    width: 327px;
-    object-fit: cover;
-    left: 120px;
-}
-
-#pre-gift {
-    background-image: url('../images/illustrations/wave-bottom.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: bottom;
-    height: 80px;
-}
-
 #footer .banner {
     position: absolute;
     width: 100vw;
@@ -406,24 +434,6 @@ main.openned #hero .btn-invitation {
         width: 100%;
         height: 350px;
         border: 0;
-    }
-
-    #quotes .quotes-images img.quotes-image-1 {
-        width: 180px;
-        height: 180px;
-        left: 0;
-        bottom: 90px;
-    }
-
-    #quotes .quotes-images img.quotes-image-2 {
-        width: 275px;
-        left: unset;
-        right: -15%;
-    }
-
-    #pre-gift {
-        height: 80px;
-        background-position: center;
     }
 }
 
