create comments section

--- a/public/assets/css/variables.css
+++ b/public/assets/css/variables.css
@@ -1,6 +1,7 @@
 :root {
     --color-primary: #777B62;
     --color-primary-light: #666666;
+    --color-primary-lightest: #999999;
     --color-secondary: #CEAE6F;
     --color-secondary-light: #FFFDF1;
     --color-light: #F2F1EF;
