--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -1,3 +1,35 @@
+*::-webkit-scrollbar {
+    height: 8px;
+    width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+    border-radius: 5px;
+    background-color: #DFE9EB;
+}
+
+*::-webkit-scrollbar-track:hover {
+    background-color: #DFE9EB;
+}
+
+*::-webkit-scrollbar-track:active {
+    background-color: #DFE9EB;
+}
+
+*::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: #999999;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background-color: #999999;
+}
+
+*::-webkit-scrollbar-thumb:active {
+    background-color: #999999;
+}
+
+
 body {
     overflow-x: hidden;
 }
@@ -31,7 +63,7 @@ audio {
     opacity: 1;
 }
 
-#loading.loaded{
+#loading.loaded {
     opacity: 0;
 }
 
