--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -129,7 +129,10 @@ main.openned #hero .btn-invitation {
 }
 
 #rsvp form input,
-#rsvp form select {
+#rsvp form select,
+#comments form input,
+#comments form textarea,
+#comments form select {
     border: 1px solid rgba(230, 230, 230, 1);
 }
 
@@ -164,6 +167,21 @@ main.openned #hero .btn-invitation {
     display: flex;
     align-items: center;
     gap: 10px;
+}
+
+#comments {
+    height: 100vh;
+}
+
+#comments .right {
+    display: flex;
+    align-items: center;
+    padding: 0 5.5rem !important;
+}
+
+#comments .right .comments-wrapper{
+    height: 80vh !important;
+    overflow-y: scroll;
 }
 
 /* Mobile */
@@ -237,6 +255,14 @@ main.openned #hero .btn-invitation {
     #gift .bank-item .header img {
         order: 1;
     }
+
+    #comments .right {
+        padding: 2rem 2rem !important;
+    }
+    
+    #comments .right .comments-wrapper{
+        height: 80vh !important;
+    }
 }
 
 /* Tablet */
@@ -276,6 +302,14 @@ main.openned #hero .btn-invitation {
     #rsvp .banner {
         width: 100%;
         height: 600px;
+    }
+
+    #comments .right {
+        padding: 3rem 5rem !important;
+    }
+    
+    #comments .right .comments-wrapper{
+        height: 80vh !important;
     }
 }
 
