--- a/public/assets/css/utilities.css
+++ b/public/assets/css/utilities.css
@@ -128,6 +128,10 @@
     color: var(--color-primary-light) !important;
 }
 
+.text-primary-lightest {
+    color: var(--color-primary-lightest) !important;
+}
+
 .text-secondary {
     color: var(--color-secondary) !important;
 }
@@ -198,6 +202,10 @@
 
 .rounded-5 {
     border-radius: .5rem !important;
+}
+
+.rounded-8 {
+    border-radius: 8px !important;
 }
 
 .rounded-16 {
