--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -202,6 +202,15 @@ main.openned #hero .btn-invitation {
     gap: 10px;
 }
 
+#gift .bank-item .actions .btn-copied {
+    transition: all 250ms ease-in-out;
+    opacity: 1;
+}
+
+#gift .bank-item .actions .btn-copied.hidden {
+    opacity: 0;
+}
+
 #comments {
     height: 100vh;
 }
