adjust background image on maps section

--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -91,7 +91,7 @@ main.openned #hero .scroll-info {
     width: 60%;
 }
 
-#gallery {
+#gallery, #maps {
     background-image: url('/assets/images/general/bg-abstract.png');
     background-size: cover;
     background-position: center;
