--- a/public/assets/css/variables.css
+++ b/public/assets/css/variables.css
@@ -3,6 +3,7 @@
     --color-primary-light: #666666;
     --color-primary-lightest: #999999;
     --color-secondary: #CEAE6F;
+    --color-secondary-lighter: #E5D4B3;
     --color-secondary-light: #FFFDF1;
     --color-light: #F2F1EF;
 }
