adjust rsvp form

--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -192,6 +192,7 @@ main.openned #hero .scroll-info {
 
 #rsvp form input,
 #rsvp form select,
+#rsvp form textarea,
 #comments form input,
 #comments form textarea,
 #comments form select {
