--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -199,6 +199,13 @@ main.openned #hero .scroll-info {
     border: 1px solid rgba(230, 230, 230, 1);
 }
 
+#gift {
+    background-image: url('/assets/images/general/bg-abstract-2.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
 #gift .sub-title {
     max-width: 500px;
     margin: auto;
@@ -211,7 +218,7 @@ main.openned #hero .scroll-info {
 
 #gift .bank-item {
     padding: 2rem;
-    box-shadow: 0px 0px 1px 10px rgba(255, 255, 255, 0.2);
+    box-shadow: 0px 0px 1px 10px rgba(119, 123, 98, 0.2);
 }
 
 #gift .bank-item .header {
