adjust background image on countdown section

--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -149,10 +149,30 @@ main.openned #hero .scroll-info {
     width: 25%;
 }
 
+#countdown {
+    background-image: url('/assets/images/general/bg-abstract-2.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    display: grid;
+    place-content: center;
+}
+
+#countdown .wrapper {
+    height: 570px;
+    width: 800px;
+    background-image: url('/assets/images/general/flower-1.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    display: grid;
+    place-content: center;
+}
+
 #countdown .timer-days {
     width: 100px;
     height: 100px;
-    box-shadow: 0 0 0 5px rgba(119, 123, 98, 0.1);
+    box-shadow: 0 0 0 5px rgba(119, 123, 98, 0.15);
 }
 
 #maps .maps-wrapper {
@@ -374,6 +394,10 @@ main.openned #hero .scroll-info {
         object-position: center;
     }
 
+    section#countdown {
+        padding: unset;
+    }
+
     .maps-banner {
         height: 340px;
     }
@@ -447,6 +471,9 @@ main.openned #hero .scroll-info {
 
 /* Tablet */
 @media screen and (min-width: 768px) and (max-width: 1023px) {
+    section#countdown {
+        padding: 1rem 0.5rem;
+    }
 
     #gallery .swiper-slide img,
     #gallery img {
