change countdown calculation from js to php

--- a/public/assets/css/utilities.css
+++ b/public/assets/css/utilities.css
@@ -328,6 +328,10 @@
     transition: all 350ms ease-in-out;
 }
 
+.gap-8 {
+    gap: 8px;
+}
+
 @media screen and (max-width: 767px) {
 
     /* Font Size*/
