--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -22,7 +22,7 @@ main #hero .wrapper {
     position: relative;
 }
 
-main #hero .scroll-info {
+#hero .scroll-info {
     position: absolute;
     z-index: 100;
     top: 88%;
