adjust gift section design

--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -258,11 +258,14 @@ main.openned #hero .scroll-info {
 }
 
 #gift .bank-wrapper {
-    max-width: 600px;
     margin: auto;
+    gap: 3rem;
+    display: flex;
 }
 
 #gift .bank-item {
+    width: 100%;
+    flex: 1;
     padding: 2rem;
     box-shadow: 0px 0px 1px 10px rgba(119, 123, 98, 0.2);
 }
@@ -292,6 +295,30 @@ main.openned #hero .scroll-info {
 
 #gift .bank-item .actions .btn-copied.hidden {
     opacity: 0;
+}
+
+.gift-banner-wrapper {
+    margin: 0 auto;
+}
+
+.gift-banner,
+#gift-modal .modal-content {
+    background-image: url('/assets/images/general/bg-abstract-secondary-sm.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#gift-modal #gift .bank-wrapper {
+    max-width: unset;
+}
+
+#gift-modal .modal-content {
+    overflow: hidden;
+    border-radius: 16px;
+}
+
+#gift-modal .modal-header {
+    border-bottom: unset !important;
 }
 
 #comments {
@@ -484,6 +511,10 @@ main.openned #hero .scroll-info {
         background-position: bottom;
     }
 
+    #gift .bank-wrapper {
+        display: block;
+    }
+
     #gift .bank-item {
         padding: 1.5rem;
     }
@@ -592,6 +623,10 @@ main.openned #hero .scroll-info {
         background-position: bottom;
     }
 
+    #gift .bank-wrapper {
+        display: block;
+    }
+
     #comments {
         height: unset;
     }
@@ -646,5 +681,21 @@ main.openned #hero .scroll-info {
 
     #comments {
         height: auto !important;
+    }
+
+    .gift-banner-wrapper {
+        max-width: 70vw;
+        margin-top: 5rem;
+    }
+
+    .gift-banner {
+        background-image: url('/assets/images/general/bg-abstract-secondary-lg.png');
+        border-radius: 8px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .modal-xl {
+        max-width: 980px !important;
     }
 }
