--- a/public/assets/css/utilities.css
+++ b/public/assets/css/utilities.css
@@ -174,6 +174,11 @@
     font-style: italic;
 }
 
+.text-nowrap {
+    white-space: nowrap;
+    overflow-x: auto;
+}
+
 /* Background Color */
 .bg-primary {
     background-color: var(--color-primary) !important;
